# rust-zoo-micro

./: .env  Cargo.toml  README.md
animals-svc/: Cargo.toml
animals_svc/: Cargo.toml
animals_svc/src/: lib.rs  models.rs  schema.rs
exhibits-api/: Cargo.toml
exhibits-svc/: Cargo.toml
exhibits-svc/migrations/: exhibits.down.sql  exhibits.up.sql
exhibits-svc/src/: lib.rs
exhibits_api/: Cargo.toml
exhibits_api/src/: main.rs
exhibits_svc/: Cargo.toml
exhibits_svc/migrations/: exhibits.up.sql
exhibits_svc/src/: lib.rs  models.rs  schema.rs
migrations/2018-08-25-064942_exhibits/: down.sql  up.sql
migrations/2018-08-25-065336_animals/: down.sql  up.sql
src/: schema.rs
